<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polytech.epulapp.tpandroidpolytech.MainActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/Offlinetxt"
            android:layout_width="match_parent"
            android:text="@string/offline"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/unvsiaBtn"
                android:text="@string/unvsia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/unvsunBtn"
                android:text="@string/unvsun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/Onlinetxt"
            android:layout_width="match_parent"
            android:text="@string/online"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:text="@string/unvsvunol"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>
